--- a/UpSchool_.NETCore/Views/_ViewImports.cshtml
+++ b/UpSchool_.NETCore/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using UpSchool_.NETCore
 @using UpSchool_.NETCore.Models
+@using UpSchool_.NETCore.Models.Concrete
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
