--- a/UpSchool_.NETCore/Areas/Employee/Views/EmployeeTask/Index.cshtml
+++ b/UpSchool_.NETCore/Areas/Employee/Views/EmployeeTask/Index.cshtml
@@ -1,13 +1,11 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
 @{
     int count = 0;
 }
 
 @model List<EmployeeTask>
 
-<h3>Görev Listesi</h3>
+<h3>Görev Listesi1</h3>
 
 <table class="table table-bordered">
 
@@ -38,4 +36,4 @@
     }
 </table>
 
-<a href="EmployeeTaskAdd" class="btn btn-outline-info">Yeni Görev Girişi</a>
+<a href="EmployeeTasAdd" class="btn btn-outline-info">Yeni Görev Girişi</a>
