--- a/UpSchool_.NETCore/Views/Employee/Index.cshtml
+++ b/UpSchool_.NETCore/Views/Employee/Index.cshtml
@@ -28,17 +28,18 @@
         <tr>
             <td>@item.EmployeeID</td>
             <td>@item.EmployeeName  @item.EmployeeSurname</td>
-            <td><a href="Employee/DeleteEmployee/@item.EmployeeID" class="btn btn-warning">Durum</a></td>
-            <td><a href="/Employee/UpdateEmployee/" class="btn btn-warning">Sil</a></td>
-            <td><a href="#" class="btn btn-success">Güncelle</a></td>
+            <td>@item.Category.CategoryName</td>
+            <td><a href="Employee/DeleteEmployee/@item.EmployeeID" class="btn btn-warning">Sil</a></td>
+            <td><a href="/Employee/UpdateEmployee/" class="btn btn-warning">Güncelle</a></td>
+            <td><a href="#" class="btn btn-success">Görevler</a></td>
             @{
                 if(item.EmployeeStatus == true)
                 {
-                    <td><a href="/Employee/ChangeStatuesToFalse/@item.EmployeeID" class="btn btn-outline-warning"></a></td>
+                    <td><a href="/Employee/ChangeStatuesToFalse/@item.EmployeeID" class="btn btn-outline-warning">Pasif Yap</a></td>
                 }
                 else
                 {
-                    <td><a href="/Employee/ChangeStatuesToTrue/@item.EmployeeID" class="btn btn-outline-danger"></a></td>
+                    <td><a href="/Employee/ChangeStatuesToTrue/@item.EmployeeID" class="btn btn-outline-danger">Aktif Yap</a></td>
                 }
             }
         </tr>
