--- a/UpSchool_.NETCore/Views/EmployeeTask/AddTask.cshtml
+++ b/UpSchool_.NETCore/Views/EmployeeTask/AddTask.cshtml
@@ -1,15 +1,10 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-@model EmployeeTask
+﻿@model EmployeeTask
 
 <br />
 <form method="post">
     <label>Personel</label>
     @Html.DropDownListFor(x=> x.AppUser.Id, (List<SelectListItem>) ViewBag.v, new {@class="form-control"})
-        <br />
+      
     <label>Görev Başlığı</label>
     <input type="text" class="form-control", asp-for="Title"/>
     <br />
