--- a/UpSchool_.NETCore/Views/Login/Index.cshtml
+++ b/UpSchool_.NETCore/Views/Login/Index.cshtml
@@ -38,10 +38,10 @@
                             <h6 class="font-weight-light">Sign in to continue.</h6>
                             <form class="pt-3" method="post">
                                 <div class="form-group">
-                                    <input type="text" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Kullanıcı Adınız" asp-for="UserName">
+                                    <input type="text" class="form-control form-control-lg" placeholder="Kullanıcı Adınız" asp-for="UserName">
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Şifreniz" asp-for="PasswordHash">
+                                    <input type="password" class="form-control form-control-lg" placeholder="Şifreniz" asp-for="PasswordHash">
                                 </div>
                                 <div class="mt-3">
                                     <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">Giriş Yap</button>
@@ -53,7 +53,7 @@
                                             Keep me signed in
                                         </label>
                                     </div>
-                                    <a href="#" class="auth-link text-black">Forgot password?</a>
+                                    
                                 </div>
                                 <div class="mb-2">
                                     <button type="button" class="btn btn-block btn-facebook auth-form-btn">
@@ -61,7 +61,7 @@
                                     </button>
                                 </div>
                                 <div class="text-center mt-4 font-weight-light">
-                                    Don't have an account? <a href="register.html" class="text-primary">Create</a>
+                                    Don't have an account? <a href="~/Register/Index" class="text-primary">Yarat</a>
                                 </div>
                             </form>
                         </div>
