--- a/UpSchool_.NETCore/Views/Register/Index2.cshtml
+++ b/UpSchool_.NETCore/Views/Register/Index2.cshtml
@@ -1,144 +1,44 @@
-﻿
-<h1>Index2</h1>
+﻿@using UpSchool.EntityLayer.Concrete
 
-@model AppUser
+@model List<AppUser>
+
 @{
-    Layout = null;
+    ViewBag.Title = "deneme";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
-<html lang="en">
+<h1>Index</h1>
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Majestic Admin</title>
-    <!-- plugins:css -->
-    <link rel="stylesheet" href="~/MajesticAdmin-Free-Bootstrap-Admin-Template-master/template/vendors/mdi/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="~/MajesticAdmin-Free-Bootstrap-Admin-Template-master/template/vendors/base/vendor.bundle.base.css">
-    <!-- endinject -->
-    <!-- plugin css for this page -->
-    <!-- End plugin css for this page -->
-    <!-- inject:css -->
-    <link rel="stylesheet" href="~/MajesticAdmin-Free-Bootstrap-Admin-Template-master/template/css/style.css">
-    <!-- endinject -->
-    <link rel="shortcut icon" href="~/MajesticAdmin-Free-Bootstrap-Admin-Template-master/template/images/favicon.png" />
+<table class="table table-bordered">
 
-    <!--sweet alert kullanımı-->
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="~/lib/jquery/dist/jquery.js"></script>
-</head>
+    <tr>
+        <th>#</th>
+        <th>Ad Soyad</th>
+        <th>Mail</th>
+        <th>Cinsiyet</th>
+        <th>Sil</th>
+        <th>Düzenle</th>
+        <th>Detaylar</th>
+    </tr>
 
-<body>
-    <div class="container-scroller">
-        <div class="container-fluid page-body-wrapper full-page-wrapper">
-            <div class="content-wrapper d-flex align-items-center auth px-0">
-                <div class="row w-100 mx-0">
-                    <div class="col-lg-4 mx-auto">
-                        <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-                            <div class="brand-logo">
-                                <img src="~/MajesticAdmin-Free-Bootstrap-Admin-Template-master/template/images/logo.svg" alt="logo">
-                            </div>
-                            <h4>Yeni misin?</h4>
-                            <h6 class="font-weight-light">Hemen birkaç adımda üyeliğini tamamla.</h6>
-                            <form class="pt-3" method="post">
-                                <div class="form-group">
-                                    <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Kullanıcı Adınız" asp-for="UserName">
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Adınız" asp-for="Name">
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Soyadınız" asp-for="Surname">
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email" asp-for="Email">
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Telefon Numarası" asp-for="PhoneNumber">
-                                </div>
-
-
-
-
-                                <div class="form-group">
-                                    <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Şifreniz" asp-for="PasswordHash">
-                                </div>
-                                <div class="mb-4">
-                                    <div class="form-check">
-
-                                        <label class="form-check-label text-muted">
-                                            <input type="checkbox" class="form-check-input">
-                                            <a id="acceptRules" href="#">Kuralları</a> okudum kabul ediyorum.
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="mt-3">
-                                    <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="../../index.html" id="registerButton">Kayıt Ol</button>
-                                </div>
-                                <div class="text-center mt-4 font-weight-light">
-                                    Zaten bir hesabın var mı? <a href="/Login/Index" class="text-primary">Login</a>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- content-wrapper ends -->
-        </div>
-        <!-- page-body-wrapper ends -->
-    </div>
-    <!-- container-scroller -->
-    <!-- plugins:js -->
-    <script src="~/MajesticAdmin-Free-Bootstrap-Admin-Template-master/template/vendors/base/vendor.bundle.base.js"></script>
-    <!-- endinject -->
-    <!-- inject:js -->
-    <script src="~/MajesticAdmin-Free-Bootstrap-Admin-Template-master/template/js/off-canvas.js"></script>
-    <script src="~/MajesticAdmin-Free-Bootstrap-Admin-Template-master/template/js/hoverable-collapse.js"></script>
-    <script src="~/MajesticAdmin-Free-Bootstrap-Admin-Template-master/template/js/template.js"></script>
-    <!-- endinject -->
-    @if (ViewBag.registerIsSucceeded == true)
+    @foreach (var item in Model)
     {
-        <script>
-            $('#registerButton').click(function () {
-                swal({
-                    title: "Kayıt Başarılı",
-                    text: "Sitemize kaydınız başarıyla gerçekleşti.",
-                    icon: "success",
-                    button: "Tamam",
-                });
-            });
-        </script>
-
+        <tr>
+            <td>@item.Id</td>
+            <td>@item.Name  @item.Surname</td>
+            <td>@item.Email</td>
+            <td>@item.Gender</td>
+            <td><a href="#" class="btn btn-outline-danger">Sil</a></td>
+            <td><a href="#" class="btn btn-outline-success">Güncelle</a></td>
+            <td><a href="#" class="btn btn-outline-dark">Detaylar</a></td>
+        </tr>
     }
-    else
-    {
-        <script>
-            $('##registerButton').click(function () {
-                //swal("Site Kabul Şartları", "Sitemizde verdiğiniz mail adresi üzerinden bilgi ve haber e-postaları spam ölçüsüne varmadan gönderilmeye devam edilecektir. Eğer e-posta bülteninden çıkmak isterseniz mail ileti dizisini durdurabilirsiniz, şifre ve mail adresleriniz şifrelenmiş formatta herhangi bir kullanıcının görmeyeceği şekilde veritabanlarımızda saklanmaktadır.");
-                swal({
-                    title: "Kayıt Başarısız",
-                    text: "Sitemize kayıt işleminizde bir sorun oluştu. Lütfen bilgileri doğru girdiğinizden ve boş bırakmadığınızdan emin olunuz!!",
-                    icon: "error",
-                    button: "Tamam",
-                });
-            });
-        </script>
-
-    }
+</table>
 
 
-</body>
 
 
-</html>
-<script>
-    $('#acceptRules').click(function () {
-        swal({
-            title: "Site Kabul Şartları",
-            text: "Sitemizde kayıt sırasında verdiğiniz tüm bilgileriniz gizlilik çerçevesinde saklanmaktadır."
-                button: "Tamam",
-        });
-    });
-</script>
+
+
+
+
