--- a/UpSchool_.NETCore/Areas/Employee/Views/EmployeeProfile/Index.cshtml
+++ b/UpSchool_.NETCore/Areas/Employee/Views/EmployeeProfile/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model UserEditProfile
+﻿@using UpSchool_.NETCore.Areas.Employee.Models
+@model UserEditProfile
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_EmployeeLayout.cshtml";
