--- a/UpSchool_.NETCore/Areas/Employee/Views/EmployeeTask/Index.cshtml
+++ b/UpSchool_.NETCore/Areas/Employee/Views/EmployeeTask/Index.cshtml
@@ -1,6 +1,12 @@
-﻿
+﻿@using UpSchool.EntityLayer.Concrete
+
 @{
     int count = 0;
+}
+
+@{
+    ViewBag.Title = "deneme";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @model List<EmployeeTask>
