--- a/UpSchool_.NETCore/Views/Report/ReportList.cshtml
+++ b/UpSchool_.NETCore/Views/Report/ReportList.cshtml
@@ -5,5 +5,7 @@
 }
 
 <h1>ReportList</h1>
-
+<br /><br />
 <a href="/Report/ExcelStatic/" class="btn btn-outline-danger">Excel Statik Liste</a>
+<a href="/Report/DynamicExcel/" class="btn btn-outline-danger">Excel Dinamik Liste</a>
+<a href="/Report/StaticPdfReport/" class="btn btn-outline-danger">Pdf Static Liste</a>
