Fixed register module

--- a/UpSchool_.NETCore/Views/Login/Index.cshtml
+++ b/UpSchool_.NETCore/Views/Login/Index.cshtml
@@ -61,7 +61,7 @@
                                     </button>
                                 </div>
                                 <div class="text-center mt-4 font-weight-light">
-                                    Don't have an account? <a href="~/Register/Index" class="text-primary">Yarat</a>
+                                    Don't have an account? <a href="~/Register/Index3" class="text-primary">Yarat</a>
                                 </div>
                             </form>
                         </div>
