--- a/UpSchool_.NETCore/Views/Employee/UpdateEmployee.cshtml
+++ b/UpSchool_.NETCore/Views/Employee/UpdateEmployee.cshtml
@@ -1,9 +1,9 @@
-﻿
+﻿@model Emploee
 @{
-    ViewBag["Title"] = "UpdateEmployee";
+    ViewBag.Title = "deneme";
     Layout = "~/Views/Shared/_CRMLayout.cshtml";
 }
-@model Emploee
+
 
 <h1>Personel Güncelleme Sayfası</h1>
 
