--- a/UpSchool_.NETCore/Areas/Admin/Views/Contact/AddContact.cshtml
+++ b/UpSchool_.NETCore/Areas/Admin/Views/Contact/AddContact.cshtml
@@ -27,5 +27,6 @@
     <input type="text" class="form-control" asp-for="Content" />
     <span asp-validation-for="Content" class="text-danger"></span>
     <br />
+    <button class="btn btn-primary">Mesaj Gönder</button>
 </form>
 
