--- a/UpSchool_.NETCore/Views/Employee/Index.cshtml
+++ b/UpSchool_.NETCore/Views/Employee/Index.cshtml
@@ -9,6 +9,7 @@
     ViewBag.Title = "deneme";
 }
 
+<link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
 <h1>Personel Listesi</h1>
 
 <table class="table table-bordered">
