--- a/UpSchool_.NETCore/Views/Employee/UpdateEmployee.cshtml
+++ b/UpSchool_.NETCore/Views/Employee/UpdateEmployee.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_CRMLayout.cshtml";
 }
 
-
+<link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
 <h1>Personel Güncelleme Sayfası</h1>
 
 <form method="post">
