--- a/UpSchool_.NETCore/Views/EmployeeTask/AddTask.cshtml
+++ b/UpSchool_.NETCore/Views/EmployeeTask/AddTask.cshtml
@@ -14,7 +14,8 @@
     <label>Görev Açıklaması</label>
     <textarea cols="2" rows="5" class="form-control" asp-for="Details"></textarea>
     <br />
-    <button class="btn btn-outline-info">Görevi Tanımla</button>
+    @*<button class="btn btn-outline-info">Görevi Tanımla</button>*@
+    <input type="submit" class="btn btn-outline-info" asp-controller="EmployeeTask" asp-action="AddTask" value="Ekle" />
 </form>
 
 
