--- a/UpSchool_.NETCore/Areas/Admin/Views/Alert/Index.cshtml
+++ b/UpSchool_.NETCore/Areas/Admin/Views/Alert/Index.cshtml
@@ -7,8 +7,8 @@
 <h1>Index</h1>
 
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-<script src="c:\users\pc\source\repos\upschool_.netcore\upschool_.netcore\wwwroot\lib\jquery\dist\jquery.min.js"></script>
-<script src="c:\users\pc\source\repos\upschool_.netcore\upschool_.netcore\wwwroot\lib\jquery\dist\jquery.js"></script>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/jquery/dist/jquery.js"></script>
 <button id="btn1" style="display:inline-block; inline-size:150px">Button 1 </button>
 <br />
 <button id="btn2" style="display:inline-block; inline-size:150px">Button 2 </button>
