--- a/UpSchool_.NETCore/Views/Category/Index.cshtml
+++ b/UpSchool_.NETCore/Views/Category/Index.cshtml
@@ -21,8 +21,8 @@
             <td>@item.CategoryID</td>
             <td>@item.CategoryName</td>
             <td><a href="#" class="btn btn-warning">Durum</a></td>
-            <td><a href="#" class="btn btn-warning">Sil</a></td>
-            <td><a href="#" class="btn btn-success">Güncelle</a></td>
+            <td><a href="/Category/DeleteCategory/@item.CategoryID" class="btn btn-warning">Sil</a></td>
+            <td><a href="/Category/UpdateCategory/@item.CategoryID" class="btn btn-success">Güncelle</a></td>
 
         </tr>
     }
