--- a/UpSchool_.NETCore/Views/Role/Index.cshtml
+++ b/UpSchool_.NETCore/Views/Role/Index.cshtml
@@ -2,7 +2,8 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-
+    ViewData["Title"] = "RoleList";
+    Layout = "~/Views/Shared/_CrmLayout.cshtml";
 }
 @model List<AppRole>
 <h1>Rol Listesi</h1>
