--- a/UpSchool_.NETCore/Views/Shared/Components/_FeatureDashboardPartial/Default.cshtml
+++ b/UpSchool_.NETCore/Views/Shared/Components/_FeatureDashboardPartial/Default.cshtml
@@ -21,7 +21,12 @@
             <button type="button" class="btn btn-light bg-white btn-icon me-3 mt-2 mt-xl-0">
                 <i class="mdi mdi-plus text-muted"></i>
             </button>
-            <button class="btn btn-primary mt-2 mt-xl-0">Generate report</button>
+
+            <div style="display:flex; gap:15px">
+                <button class="btn btn-primary mt-2 mt-xl-0">Excell Raporları  </button>
+                <button class="btn btn-primary mt-2 mt-xl-0">PDF Raporları</button>
+
+            </div>
         </div>
     </div>
 </div>
